<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_item_share"
        android:icon="?attr/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_item_bookmark"
        android:icon="?attr/ic_playlist_add"
        android:title="@string/bookmark_playlist"
        android:visible="true"
        app:showAsAction="ifRoom"
        tools:visible="true"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_openInBrowser"
        android:orderInCategory="2"
        android:title="@string/open_in_browser"
        app:showAsAction="never"/>
</menu>