<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/switch_mode"
        android:icon="?attr/ic_grid"
        android:title="@string/grid"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/start_downloads"
        android:visible="false"
        android:icon="?attr/play"
        android:title="@string/start_downloads"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/pause_downloads"
        android:visible="false"
        android:icon="?attr/pause"
        android:title="@string/pause_downloads"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/clear_list"
        android:visible="false"
        android:icon="?attr/ic_delete"
        android:title="@string/clear_finished_download"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>
