<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="LinearLayout"
    tools:orientation="vertical"
    tools:gravity="center_horizontal"
    tools:layout_width="match_parent"
    tools:layout_height="wrap_content">
    <ProgressBar
        android:id="@+id/loading_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:indeterminate="true"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/error_message_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/general_error"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:text="@string/network_error"
        tools:visibility="visible" />

    <Button
        android:id="@+id/error_button_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/retry"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:theme="@style/RedButton"
        android:visibility="gone"
        tools:visibility="visible" />
</merge>